# cursor-workshop

./: .pre-commit-config.yaml  Makefile  README.md  mcp.json  pyproject.toml
.cursor/rules/: readme-badges.mdc
src/workshop/: main.py
workshop/: README.md
workshop/01-uc-project-planning-mdp/: README.md
workshop/02-uc-cli-tool/: README.md
workshop/02-uc-jira-mcp/: README.md
workshop/03-uc-cli-tool/: README.md
workshop/03-uc-creating-rules/: README.md
workshop/04-uc-final-project-pomo-go/: README.md
workshop/04-uc-jira-mcp/: README.md
workshop/05-uc-specs-forge/: README.md
workshop/06-uc-final-project-pomo-go/: README.md
